# webrtc_ros

webrtc/: CMakeLists.txt  checkout_source.sh  gn_interpreter.py  gn_parse.py  package.xml  sync_chromium.py  test.gn
webrtc/shim/tools/generate_library_loader/: generate_library_loader.gni
webrtc/shim/webrtc_ros/: config.gni
webrtc_ros/: CMakeLists.txt  package.xml
webrtc_ros/include/webrtc_ros/: configure_message.h  ros_log_context.h  ros_subscriber_data_channel.h  ros_video_capturer.h  ros_video_frame_tools.h  ros_video_renderer.h
webrtc_ros/msg/: MessageInfo.msg
webrtc_ros/scripts/: message_info_node.py
webrtc_ros/src/: configure_message.cpp  ros_log_context.cpp  ros_subscriber_data_channel.cpp  ros_video_capturer.cpp  ros_video_frame_tools.cpp  ros_video_frame_tools_webrtc.cpp  ros_video_renderer.cpp  webrtc_client.cpp
webrtc_ros/srv/: GetMessageInfo.srv
webrtc_ros/web/: ros_serialization.js  subscriber.html  subscriber.js  webrtc_ros.js
