<?xml version="1.0"?>
<package format="2">
  <name>webrtc_ros</name>
  <version>0.0.0</version>
  <description>A package with ROS utilities for talking to WebRTC</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>webrtc</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>async_web_server_cpp</depend>
  <depend>topic_tools</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>zlib</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
